--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div class="middle">
 
     <div class="profile">
-      <img src="../Images/dp_round.png" alt="Hitanshu's profile picture">
+      <img src="dp_round.png" alt="Hitanshu's profile picture">
       <h2 id="hello" >Hello!</h2>
       <p>I'm Hitanshu Saini, a third-year undergraduate at IIT Kanpur, majoring in Aerospace Engineering.</p>
     </div>
