--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Humpty's Site</title>
-  <link rel="stylesheet" href="css/style_angela.css">
+  <link rel="stylesheet" href="style_angela.css">
 
   <link rel="icon" href="../icons/humpty.ico">
 
