--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Humpty's Site</title>
   <link rel="stylesheet" href="style_angela.css">
 
-  <link rel="icon" href="../icons/humpty.ico">
+  <link rel="icon" href="humpty.ico">
 
   <link href="https://fonts.googleapis.com/css?family=Handlee|Montserrat|Open+Sans|Sacramento|Solway&display=swap" rel="stylesheet">
 
