--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <span class="hostel">(i'm surrounded by them #thelivingdead)</span>
         <br><br><br>
       </p>
-      <a class="myButton" href="mailto:name@email.com">CONTACT ME</a>
+      <a class="myButton" href="mailto:hitanshu@iitk.ac.in">CONTACT ME</a>
     </div>
   </div>
 
