--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
 
   <div class="bottom">
     <br><br>
-    <a href="https://www.facebook.com/humpty.saini.129" class="fb">  <img class="fa" src="fb.png" alt="facebook profile">  </a>
+    <a href="https://www.facebook.com/humpty.saini.129" class="fb" target="_blank">  <img class="fa" src="fb.png" alt="facebook profile">  </a>
 
-    <a href="https://twitter.com/hitanshu_saini" class="tw">  <img class="fa" src="tw.png" alt="twitter profile">  </a>
+    <a href="https://twitter.com/hitanshu_saini" class="tw" target="_blank">  <img class="fa" src="tw.png" alt="twitter profile">  </a>
 
-    <a href="https://www.linkedin.com/in/hitanshu-saini-6751b9aa/" class="link"> <img class="fa" src="link.png" alt="linkedin profile">  </a>
+    <a href="https://www.linkedin.com/in/hitanshu-saini-6751b9aa/" class="link" target="_blank"> <img class="fa" src="link.png" alt="linkedin profile">  </a>
 
-    <a href="https://www.youtube.com/channel/UCRuLjU7PQJZYRF4kS-UKTUA/featured?view_as=subscriber" class="yt"> <img class="fa" src="yt.png" alt="Youtube Channel" ></a>
+    <a href="https://www.youtube.com/channel/UCRuLjU7PQJZYRF4kS-UKTUA/featured?view_as=subscriber" class="yt" target="_blank"> <img class="fa" src="yt.png" alt="Youtube Channel" ></a>
 
     <br><br>
     <p class="last-class">@ 2019 Hitanshu Saini <span>@IIT Kanpur</span> </p>
